@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.11
+Release: 0.12
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -521,15 +521,18 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
-* Thu May  2 2002 Jeff Johnson <jbj@redhat.com>
+* Fri May  3 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.12
+- use DBT_DB_MALLOC to eliminate re-malloc'ing header blobs.
+
+* Thu May  2 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.11
 - eliminate db1 support.
 - enable CDB by default.
 
-* Wed May  1 2002 Jeff Johnson <jbj@redhat.com>
+* Wed May  1 2002 Jeff Johnson <jbj@redhat.com>	4.1-0.10
 - attempt to make peace with automake-1.6.1, autoconf-2.53.
 - rip out two layers of dbN gook, internal Berkeley db is here to stay.
 
-* Fri Apr 19 2002 Jeff Johnson <jbj@redhat.com>
+* Fri Apr 19 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.09
 - fix: queries that evaluated to "" incorrectly returned NULL.
 - fix: packages produced by rpm-4.0 dinna merge signature tags.
 
